--- a/packages/client/src/scss/pages/About.module.scss
+++ b/packages/client/src/scss/pages/About.module.scss
@@ -35,7 +35,7 @@
   }
 
   h1 {
-    @include h2Laptop();
+    @include heading("h2", "laptop", "black");
     text-align: center;
     letter-spacing: 3.5px;
     color: getColor("tan-color-extra-light");
@@ -47,7 +47,7 @@
   }
 
   h2 {
-    @include h4Laptop();
+    @include heading("h4", "laptop", "black");
     align-self: flex-start;
     text-align: left;
     letter-spacing: 2.5px;
