--- a/packages/client/src/scss/pages/CreateLog.module.scss
+++ b/packages/client/src/scss/pages/CreateLog.module.scss
@@ -13,7 +13,7 @@
   margin: 8rem 0;
 
   h2 {
-    @include h2Laptop();
+    @include heading("h2", "laptop", "black");
     text-align: center;
     letter-spacing: 3.5px;
     color: getColor("tan-color-extra-light");
@@ -33,7 +33,7 @@
   padding: 8rem 0;
 
   h2 {
-    @include h2Laptop();
+    @include heading("h2", "laptop", "black");
     text-align: center;
     letter-spacing: 3.5px;
     color: getColor("tan-color-extra-light");
