--- a/packages/client/src/scss/pages/FAQ.module.scss
+++ b/packages/client/src/scss/pages/FAQ.module.scss
@@ -37,7 +37,7 @@
   }
 
   h1 {
-    @include h2Laptop();
+    @include heading("h2", "laptop", "black");
     text-align: center;
     letter-spacing: 3.5px;
     color: getColor("tan-color-extra-light");
