--- a/packages/client/src/scss/abstracts/_functions.scss
+++ b/packages/client/src/scss/abstracts/_functions.scss
@@ -4,6 +4,14 @@
   @return map-get($map: $colors, $key: $color);
 }
 
+@function getColorWithOpacity($color, $opacity) {
+  $colorValue: map-get(
+    $map: $colors,
+    $key: $color,
+  );
+  @return rgba($colorValue, $opacity);
+}
+
 @function getFontSize($fontSize) {
   @return map-get($map: $fontSizes, $key: $fontSize);
 }
