--- a/packages/client/src/scss/abstracts/mixins/_typography.scss
+++ b/packages/client/src/scss/abstracts/mixins/_typography.scss
@@ -1,36 +1,24 @@
 @use "../functions" as *;
 @use "../variables" as *;
 
-@mixin paragraphLaptop() {
-  font-family: "EB Garamond", serif;
-  font-size: getFontSize("p-laptop");
+@mixin paragraph($device, $color) {
+  font-family: "Cabin", sans-serif;
+  font-size: getFontSize("p-#{$device}");
+
+  @if $color == "black" {
+    color: getColor("black-100-1");
+  } @else if $color == "white" {
+    color: getColor("tan-color-extra-light");
+  }
 }
 
-@mixin h1Laptop() {
+@mixin heading($headingType, $device, $color) {
   font-family: "Cabin", sans-serif;
-  font-size: getFontSize("h1-laptop");
-}
-@mixin h2Laptop() {
-  font-family: "Cabin", sans-serif;
-  font-size: getFontSize("h2-laptop");
-}
+  font-size: getFontSize("#{$headingType}-#{$device}");
 
-@mixin h3Laptop() {
-  font-family: "Cabin", sans-serif;
-  font-size: getFontSize("h3-laptop");
-}
-
-@mixin h4Laptop() {
-  font-family: "Cabin", sans-serif;
-  font-size: getFontSize("h4-laptop");
-}
-
-@mixin h5Laptop() {
-  font-family: "Cabin", sans-serif;
-  font-size: getFontSize("h5-laptop");
-}
-
-@mixin h6Laptop() {
-  font-family: "Cabin", sans-serif;
-  font-size: getFontSize("h6-laptop");
+  @if $color == "black" {
+    color: getColor("black-100-1");
+  } @else if $color == "white" {
+    color: getColor("tan-color-extra-light");
+  }
 }
