--- a/packages/client/src/scss/components/others/Modals.module.scss
+++ b/packages/client/src/scss/components/others/Modals.module.scss
@@ -3,6 +3,7 @@
 .popupModalContainer {
   @include flexCenter(column);
   position: absolute;
+  z-index: 3;
   top: 0;
   width: 100%;
   max-width: $authFormPageTemplateFormWidth;
