--- a/packages/client/src/scss/components/page/HomeCards.module.scss
+++ b/packages/client/src/scss/components/page/HomeCards.module.scss
@@ -17,7 +17,7 @@
   border-bottom: 1.5px solid getColor("black-100-1");
 
   h1 {
-    @include h2Laptop();
+    @include heading("h2", "laptop", "black");
     text-align: center;
     letter-spacing: 3.5px;
     color: getColor("tan-color-extra-light");
