--- a/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
+++ b/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   top: 0;
-  left: 0;
+  right: 0;
 
   img {
     width: 100%;
@@ -18,17 +18,20 @@
   @include flexCenter(column);
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   justify-content: flex-start;
-  width: $authFormPageTemplateFormWidth;
+
+  background-color: getColorWithOpacity("signup-background-color", 0.7);
+
+  width: 30%;
+  min-width: 600px;
   height: 100%;
-  background-image: url($authFormPageTemplateFormBackgroundUrl);
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-right: 1.5px solid getColor("black-100-1");
-  padding: $authFormPageTemplateFormContentPadding;
+
+  padding-bottom: 5rem;
+  margin-right: 8rem;
 }
 
+// Only used for scrollbar
 .formContainerContentWrapper {
   @include flexCenter(column);
   justify-content: flex-start;
@@ -36,7 +39,6 @@
   min-height: 100%;
   max-height: 50rem;
   overflow-y: scroll;
-  direction: rtl;
 
   &::-webkit-scrollbar {
     width: 0px;
@@ -50,27 +52,25 @@
   width: 100%;
   height: 100%;
   direction: ltr;
+  padding: 0rem 7rem;
 
-  gap: $authFormPageTemplateFormContentGap;
+  gap: 3rem;
 
   header {
     @include flexCenter(column);
+    width: 100%;
     gap: 8px;
 
-    h4 {
-      @include h4Laptop();
-      letter-spacing: 3.5px;
-      color: getColor("black-100-1");
+    h3 {
+      @include heading("h3", "laptop", "black");
     }
 
-    h5 {
-      font-size: 16px;
-      letter-spacing: 0.5px;
-      color: getColor("black-100-1");
+    h6 {
+      @include heading("h6", "phone", "black");
     }
 
     a {
-      font-size: 20px;
+      @include heading("h6", "tablet", "black");
       text-decoration: none;
       color: getColor("secondary-color-light-2.4");
 
@@ -79,5 +79,17 @@
         text-decoration: underline;
       }
     }
+  }
+}
+
+.signupLogoContainer {
+  @include flexCenter(row);
+  width: 100%;
+  gap: 1rem;
+  padding: 1rem;
+  justify-content: flex-start;
+
+  h6 {
+    @include heading("h6", "phone", "black");
   }
 }
