--- a/packages/client/src/scss/pages/Profile.module.scss
+++ b/packages/client/src/scss/pages/Profile.module.scss
@@ -22,7 +22,7 @@
   }
 
   h2 {
-    @include h2Laptop();
+    @include heading("h2", "laptop", "black");
     font-weight: 550;
     letter-spacing: 2px;
   }
@@ -51,7 +51,7 @@
   gap: 3rem;
 
   h2 {
-    @include h2Laptop();
+    @include heading("h2", "laptop", "black");
     font-weight: 550;
     letter-spacing: 2px;
     align-self: center;
