Created a fresh, brand new Home Page!

--- a/packages/client/src/scss/components/shared/NavbarMenu.module.scss
+++ b/packages/client/src/scss/components/shared/NavbarMenu.module.scss
@@ -8,6 +8,7 @@
   transition: $crispyTransformTransition;
   background-color: inherit;
   border: none;
+  margin-left: auto;
 
   svg {
     width: 100%;
