--- a/packages/client/src/scss/components/shared/Footer.module.scss
+++ b/packages/client/src/scss/components/shared/Footer.module.scss
@@ -45,7 +45,7 @@
     height: 100%;
     color: getColor("tan-color");
     text-align: start;
-    @include paragraph("laptop", "black");
+    @include paragraph("laptop", "white");
 
     &:hover {
       transform: translateX(10px);
@@ -61,7 +61,7 @@
 
   p {
     color: getColor("tan-color");
-    @include paragraph("laptop", "black");
+    @include paragraph("laptop", "white");
 
     transition:
       $crispyTransformTransition,
@@ -74,7 +74,7 @@
 
   span {
     color: getColor("tan-color");
-    @include paragraph("laptop", "black");
+    @include paragraph("laptop", "white");
 
     margin-left: $footerDistanceBetweenContactInfoSections;
     color: getColor("secondary-color-light-2.4");
@@ -93,6 +93,6 @@
 
   p {
     color: getColor("tan-color");
-    @include paragraph("laptop", "black");
+    @include paragraph("laptop", "white");
   }
 }
