--- a/packages/client/src/scss/components/shared/Navbar.module.scss
+++ b/packages/client/src/scss/components/shared/Navbar.module.scss
@@ -3,8 +3,40 @@
 .navbarContainer {
   @include flexCenter(row);
   justify-content: space-between;
+  align-items: flex-end;
   width: 100%;
   max-height: $maxNavbarHeight;
   padding: $navbarPadding;
   background-color: $navbarBackgroundColor;
+}
+
+.navbarProfileContainer {
+  @include flexCenter(row);
+  gap: 1rem;
+
+  h6 {
+    @include heading("h6", "tablet", "white");
+  }
+}
+
+.profileImageContainer {
+  @include flexCenter(column);
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  transition: $crispyTransformTransition;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
 }
