--- a/packages/client/src/scss/components/others/FormControls.module.scss
+++ b/packages/client/src/scss/components/others/FormControls.module.scss
@@ -17,6 +17,7 @@
     border-radius: 10px;
 
     width: 100%;
+    max-width: 40rem;
     height: 2.5rem;
 
     font-size: 1rem;
@@ -75,6 +76,7 @@
   height: 100%;
   background-color: rgba($color: getColor("black-100-1"), $alpha: 0.5);
   transition: opacity 0.135s linear;
+  border-radius: 5px;
 
   &:hover {
     opacity: 1;
@@ -137,16 +139,15 @@
 
 .selectFormControlContainer {
   @include flexCenter(column);
-  align-items: flex-start;
   width: 100%;
-  gap: 8px;
-
-  padding: 1rem;
-  border: 1.5px solid getColor("black-100-1");
+  gap: 2rem;
+  padding: 2rem;
+  background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+  border-radius: 25px;
 
   label {
-    font-weight: bolder;
-    font-size: 22px;
+    @include heading("h5", "laptop", "black");
+    font-weight: 550;
   }
 }
 
@@ -155,8 +156,9 @@
   list-style: none;
   width: 100%;
   gap: 1rem;
-  border: 1.5px solid getColor("black-100-1");
-  padding: 1rem;
+  padding: 2rem;
+  background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+  border-radius: 25px;
 
   li {
     @include flexCenter(row);
@@ -171,12 +173,11 @@
   width: 100%;
   gap: 8px;
 
-  padding: 1rem;
-  border: 1.5px solid getColor("black-100-1");
-
   iframe {
-    width: 50%;
-    height: 15rem;
+    width: 100%;
+    height: 17.5rem;
+    border-radius: 10px;
+    border: 1.5px solid getColor("black-75-1");
   }
 }
 
@@ -184,26 +185,27 @@
   @include flexCenter(column);
   align-items: flex-start;
   width: 100%;
-  gap: 8px;
-
-  padding: 1rem;
-  border: 1.5px solid getColor("black-100-1");
+  gap: 0.5rem;
 
   label {
-    font-weight: bolder;
-    font-size: 22px;
+    @include heading("h6", "laptop", "black");
+    font-weight: 550;
   }
 
   textarea {
     background-color: getColor("tan-color");
-    border: 1.5px solid getColor("black-100-1");
+    border: 1.5px solid getColor("black-75-1");
+    border-radius: 10px;
+
+    height: 2.5rem;
     width: 100%;
-    max-width: 40rem;
-    max-height: 48rem;
-    height: 24px;
+    min-width: 15rem;
+    max-width: 35rem;
+
     font-size: 1rem;
     padding: 0.5rem;
     font-weight: 550;
+
     word-wrap: break-word;
     transition: background-color 0.135s linear;
 
@@ -218,17 +220,16 @@
   list-style: none;
   justify-content: flex-start;
   width: 100%;
-  gap: 2rem;
+  gap: 0.5rem;
 
   li {
     @include flexCenter(row);
     position: relative;
     img {
       transition: $crispyTransformTransition;
-      width: 100%;
-      height: 100%;
-      max-width: 100px;
-      max-height: 100px;
+      width: 5rem;
+      height: 5rem;
+      border-radius: 0.5rem;
 
       &:hover {
         transform: scale(1.2);
@@ -298,14 +299,13 @@
 
 .weekdayFormControlContainer {
   @include flexCenter(column);
-  width: 100%;
   align-items: flex-start;
-  gap: 1.5rem;
+  width: 100%;
+  gap: 1rem;
 
   label {
-    font-size: 2rem;
-    font-weight: bolder;
-    color: getColor("tan-color-extra-light");
+    @include heading("h6", "laptop", "black");
+    font-weight: 550;
   }
 }
 
@@ -313,23 +313,21 @@
   @include flexCenter(row);
   list-style: none;
   justify-content: flex-start;
+  align-items: flex-start;
   width: 100%;
-  gap: 2.5rem;
+  gap: 0.5rem;
 
   li {
     @include flexCenter(row);
-    justify-content: flex-start;
-    position: relative;
-    max-width: 100px;
-    max-height: 100px;
+
     border-radius: 0.5rem;
 
     img {
       transition:
         $crispyTransformTransition,
         border 0.2s linear;
-      width: 100%;
-      height: 100%;
+      width: 5rem;
+      height: 5rem;
       border-radius: 0.5rem;
 
       &:hover {
