--- a/packages/client/src/scss/components/shared/PageTitle.module.scss
+++ b/packages/client/src/scss/components/shared/PageTitle.module.scss
@@ -3,38 +3,24 @@
 .pageTitleContainer {
   @include flexCenter(column);
   width: 100%;
-  height: $pageTitleHeight;
-  background-image: url($pageTitleBackgroundImageUrl);
+  height: 54rem;
   background-repeat: no-repeat;
   background-size: cover;
-  border-bottom: 1.5px solid getColor("black-100-1");
-
-  .img {
-    width: 100%;
-    height: 100%;
-  }
+  border-bottom: 1.5px solid getColor("black-75-1");
 
   #{&}__header {
     @include flexCenter(column);
-    margin-bottom: $pageTitleHeaderMarginBottom;
+    margin-bottom: 10rem;
+    padding: 4rem 8rem;
+    border-radius: 25px;
+    background-color: getColorWithOpacity("secondary-color-3.3", 0.8);
+
     h1 {
       @include heading("h1", "laptop", "black");
-      color: getColor("tan-color-extra-light");
-      text-shadow:
-        $titleOutlineNegativeCoeficient $titleOutlineNegativeCoeficient 0 black,
-        $titleOutlinePozitiveCoeficient $titleOutlineNegativeCoeficient 0 black,
-        $titleOutlineNegativeCoeficient $titleOutlinePozitiveCoeficient 0 black,
-        $titleOutlinePozitiveCoeficient $titleOutlinePozitiveCoeficient 0 black;
     }
 
     h3 {
       @include heading("h3", "laptop", "black");
-      color: getColor("tan-color-extra-light");
-      text-shadow:
-        $titleOutlineNegativeCoeficient $titleOutlineNegativeCoeficient 0 black,
-        $titleOutlinePozitiveCoeficient $titleOutlineNegativeCoeficient 0 black,
-        $titleOutlineNegativeCoeficient $titleOutlinePozitiveCoeficient 0 black,
-        $titleOutlinePozitiveCoeficient $titleOutlinePozitiveCoeficient 0 black;
     }
   }
 }
