Refactored the Multi-View Tool Page and the View Meal Prep Logs Page. Refactored the EntityComponent component.

--- a/packages/client/src/scss/components/shared/EntityCard.module.scss
+++ b/packages/client/src/scss/components/shared/EntityCard.module.scss
@@ -8,6 +8,12 @@
   width: 24rem;
   height: auto;
 
+  transition: $crispyTransformTransition;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
   img {
     width: 100%;
     height: 100%;
