--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -3,16 +3,20 @@
 .entityComponent {
   @include flexCenter(row);
   width: 100%;
-  min-height: 8rem;
-  height: 8rem;
+  height: 5rem;
   background-color: getColor("primary-1");
+  border-radius: 20px;
+  transition: $crispyTransformTransition;
+
+  &:hover {
+    transform: scale(1.025);
+  }
 }
 
 .entityComponentLinkWrapper {
   @include flexCenter(row);
   width: 100%;
   text-decoration: none;
-  border: 1px solid black;
 }
 
 .entityComponentHeader {
@@ -22,16 +26,17 @@
   min-width: 30%;
   gap: 1rem;
   height: 100%;
-  width: fit-content;
-
+  width: 100%;
   img {
     height: 100%;
     width: auto;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
   }
 
-  h4 {
-    font-size: 24px;
-    color: getColor("tan-color-extra-light");
+  h5 {
+    @include heading("h5", "phone", "white");
+    width: 100%;
   }
 }
 
@@ -43,4 +48,8 @@
   width: 100%;
   height: 100%;
   margin-right: 2rem;
+
+  p {
+    @include paragraph("laptop", "white");
+  }
 }
