--- a/packages/client/src/scss/components/page/EntityInfo.module.scss
+++ b/packages/client/src/scss/components/page/EntityInfo.module.scss
@@ -2,14 +2,14 @@
 
 .entityInfoContainer {
   @include pageLayout();
+  background-color: getColor("secondary-color-3.3");
 }
 
 .entityInfoContent {
   @include flexCenter(column);
   width: 100%;
-  padding: 128px;
-  gap: 256px;
-  background-image: url($authFormPageTemplateFormBackgroundUrl);
+  padding: 8rem;
+  gap: 8rem;
 }
 
 .entityInfoAppearancesContainer {
@@ -17,32 +17,32 @@
   align-items: flex-start;
   width: 100%;
   height: auto;
-  gap: 1.5rem;
+
+  h5 {
+    @include heading("h5", "laptop", "black");
+    width: 100%;
+  }
 }
 
 .entityInfoDetailsContainer {
-  @include flexCenter(column);
+  @include flexCenter(row);
+  align-items: flex-start;
   width: 100%;
-  gap: 12rem;
+  gap: 8rem;
 }
 
 .entityInfoDetailsHero {
   @include flexCenter(column);
+  border-radius: 25px;
+  background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+  padding: 2rem;
   height: auto;
   width: 100%;
-  gap: 3rem;
+  gap: 2rem;
 
-  h2 {
-    @include heading("h2", "laptop", "black");
+  h4 {
+    @include heading("h4", "laptop", "black");
     font-weight: 550;
-    letter-spacing: 2px;
-    margin-bottom: -1rem;
-  }
-
-  h3 {
-    font-size: 2rem;
-    font-weight: 550;
-    letter-spacing: 1px;
   }
 }
 
@@ -154,5 +154,110 @@
     font-size: 1.25rem;
     font-weight: 400;
     letter-spacing: 0.35px;
+  }
+}
+
+.entityInfoTutorialContainer {
+  @include flexCenter(column);
+  width: 100%;
+  gap: 2rem;
+  padding: 2rem;
+  background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+  border-radius: 25px;
+
+  h4 {
+    @include heading("h4", "laptop", "black");
+    font-weight: 550;
+  }
+
+  h5 {
+    @include heading("h5", "laptop", "black");
+    font-weight: 550;
+  }
+
+  h6 {
+    @include heading("h6", "laptop", "black");
+    font-weight: 550;
+  }
+}
+
+.entityInfoTutorialContent {
+  @include flexCenter(row);
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.entityInfoVideoTutorial {
+  @include flexCenter(column);
+  width: 40rem;
+  height: 30rem;
+  gap: 1rem;
+
+  iframe {
+    border: 1.5px solid getColor("black-75-1");
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
+}
+
+.entityInfoWrittenTutorial {
+  @extend .entityInfoVideoTutorial;
+
+  p {
+    @include paragraph("tablet", "black");
+    width: 100%;
+    background-color: getColor("tan-color");
+    border-radius: 10px;
+    border: 1.5px solid getColor("black-75-1");
+    padding: 1rem;
+  }
+}
+
+.entityInfoComponentsContainer {
+  @include flexCenter(column);
+  width: 100%;
+  gap: 2rem;
+  padding: 2rem;
+  background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+  border-radius: 25px;
+
+  h4 {
+    @include heading("h4", "laptop", "black");
+  }
+}
+
+.entityInfoComponentsSections {
+  @include flexCenter(column);
+  width: 100%;
+  gap: 6rem;
+}
+
+.entityInfoSection {
+  @include flexCenter(column);
+  width: 100%;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.entityInfoSectionH5 {
+  @include heading("h5", "laptop", "black");
+}
+
+.entityInfoSectionItems {
+  @include flexCenter(row);
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  list-style: none;
+  width: 100%;
+  row-gap: 5rem;
+
+  li {
+    @include flexCenter(row);
+    justify-content: flex-start;
+    width: 25%;
+    max-width: 25%;
   }
 }
