--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -27,6 +27,7 @@
   gap: 1rem;
   height: 100%;
   width: 100%;
+
   img {
     height: 100%;
     width: auto;
@@ -34,8 +35,8 @@
     border-bottom-left-radius: 20px;
   }
 
-  h5 {
-    @include heading("h5", "phone", "white");
+  h6 {
+    @include heading("h6", "phone", "white");
     width: 100%;
   }
 }
@@ -50,6 +51,6 @@
   margin-right: 2rem;
 
   p {
-    @include paragraph("laptop", "white");
+    @include paragraph("tablet", "white");
   }
 }
