--- a/packages/client/src/scss/pages/Settings.module.scss
+++ b/packages/client/src/scss/pages/Settings.module.scss
@@ -2,33 +2,29 @@
 
 .settingsContainer {
   @include pageLayout();
-  background-image: url("https://res.cloudinary.com/birthdayreminder/image/upload/v1709221737/VitalPrep/wood_wall_best_aqiakh.jpg");
+  background-color: getColor("secondary-color-3.3");
 }
 
 .settingsContent {
-  @include flexCenter(column);
+  @include flexCenter(row);
+  align-items: flex-start;
   width: 100%;
-  background-color: getColor("secondary-color-1.2");
-  padding: 4rem;
-  margin: 8rem 0;
+  padding: 8rem;
+  gap: 8rem;
 }
 
 .accountSettingsContainer {
   @include flexCenter(column);
   position: relative;
   width: 100%;
-  padding: 8rem 0;
+  background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+  gap: 3rem;
+  padding: 4rem;
+  border-radius: 25px;
 
-  h2 {
-    @include heading("h2", "laptop", "black");
+  h4 {
+    @include heading("h4", "laptop", "black");
     text-align: center;
-    letter-spacing: 3.5px;
-    color: getColor("tan-color-extra-light");
-    text-shadow:
-      $titleOutlineNegativeCoeficient $titleOutlineNegativeCoeficient 0 black,
-      $titleOutlinePozitiveCoeficient $titleOutlineNegativeCoeficient 0 black,
-      $titleOutlineNegativeCoeficient $titleOutlinePozitiveCoeficient 0 black,
-      $titleOutlinePozitiveCoeficient $titleOutlinePozitiveCoeficient 0 black;
   }
 }
 
@@ -36,11 +32,10 @@
   @include flexCenter(column);
   align-items: flex-start;
   width: 100%;
-  padding: 4rem 12rem;
   gap: 2rem;
 
   button {
-    margin-top: 2rem;
+    margin-top: 1rem;
     align-self: center;
   }
 }
