--- a/packages/client/src/scss/pages/Contact.module.scss
+++ b/packages/client/src/scss/pages/Contact.module.scss
@@ -2,27 +2,62 @@
 
 .contactContainer {
   @include pageLayout();
-  min-height: 100vh;
-  gap: 3rem;
-  background-image: url("https://res.cloudinary.com/birthdayreminder/image/upload/v1714124438/wallpaperflare.com_wallpaper_3_lfswhp.jpg");
+  background-color: getColor("secondary-color-3.3");
+}
 
-  h1 {
-    @include heading("h1", "laptop", "black");
+.contactContent {
+  @include flexCenter(row);
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 100%;
+  gap: 8rem;
+  padding: 8rem;
+  padding-bottom: 16rem;
+}
+
+.contactEmailContainer,
+.contactInfoContainer {
+  @include flexCenter(column);
+  width: 100%;
+  gap: 2rem;
+  padding: 4rem;
+  border-radius: 25px;
+  background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+
+  ul {
+    margin-top: 1rem;
+    max-width: 100%;
     width: 100%;
-    text-align: center;
-    color: getColor("black-100-1");
-    letter-spacing: 0.25rem;
+    gap: 0;
+    justify-content: space-evenly;
+  }
+
+  h4 {
+    @include heading("h4", "laptop", "black");
+  }
+
+  button {
+    margin-top: 1rem;
+  }
+
+  input,
+  textarea {
+    min-width: 30rem;
+  }
+
+  textarea {
+    min-height: 20rem;
   }
 }
 
+.contactEmailForm,
 .contactDetails {
   @include flexCenter(column);
-  gap: 1rem;
+  align-items: flex-start;
+  gap: 2rem;
+  width: 100%;
 
   p {
-    width: 100%;
-    font-size: 2rem;
-    font-family: "EB Garamond", serif;
-    color: getColor("black-100-1");
+    @include heading("h6", "laptop", "black");
   }
 }
