--- a/packages/client/src/scss/pages/FAQ.module.scss
+++ b/packages/client/src/scss/pages/FAQ.module.scss
@@ -6,15 +6,14 @@
 
 .faqContent {
   @include flexCenter(column);
-  row-gap: $homeCardsContainerRowGap;
-  background-image: url($homeCardsContainerBackgroundImageUrl);
-  padding: $homeCardsContainerPadding;
+  row-gap: 2rem;
+  padding: 3rem;
 }
 
 .faqContentSection {
   @include flexCenter(column);
-  padding: $homeCardContainerPadding;
-  background-color: $homeCardContainerDefaultBackgroundColor;
+  padding: 2rem;
+  background-color: blue;
   width: 100%;
   gap: 3rem;
   border-top: 1.5px solid getColor("black-100-1");
@@ -41,11 +40,6 @@
     text-align: center;
     letter-spacing: 3.5px;
     color: getColor("tan-color-extra-light");
-    text-shadow:
-      $titleOutlineNegativeCoeficient $titleOutlineNegativeCoeficient 0 black,
-      $titleOutlinePozitiveCoeficient $titleOutlineNegativeCoeficient 0 black,
-      $titleOutlineNegativeCoeficient $titleOutlinePozitiveCoeficient 0 black,
-      $titleOutlinePozitiveCoeficient $titleOutlinePozitiveCoeficient 0 black;
   }
 
   p {
@@ -72,7 +66,7 @@
   }
 
   button {
-    margin-top: $homeCardContainerButtonMarginTop;
+    margin-top: 3rem;
   }
 }
 
